trunk/Archive2/00/5a2a9e702fce9a/output
main.cpp:2:1: error: expected unqualified-id before numeric constant
 10
 ^
